crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__multiple__range_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        March,
                    ),
                    periodic: MonthPeriodic(
                        2,
                    ),
                },
                MonthKind {
                    range: (
                        January,
                        January,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
